# django-crud

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
django_project/: .env.example  package-lock.json  package.json
django_project/django_project/: settings.py  urls.py
django_project/products/: admin.py  api_urls.py  forms.py  models.py  serializers.py  urls.py  views.py
django_project/products/migrations/: 0001_initial.py
django_project/products/templates/: base.html  index.html  product_form.html
django_project/static/css/: output.css
